Fix FF icons align. fix chart seettings page on FF

--- a/client/src/app/editor/setup/setup.component.scss
+++ b/client/src/app/editor/setup/setup.component.scss
@@ -57,7 +57,7 @@
     align-content: center;
     // padding: 0px !important;
 }
-  
+
 .card-btn span {
     display: block;
     font-weight: normal !important;
@@ -75,6 +75,7 @@
     font-size: 32px;
     height: 32px;
     width: 32px;
+    margin:auto;
 }
 .card-btn-content span {
     display: block;
